@@ -1,15 +1,18 @@
 <pdconfig>
   <service name="twisted-lorien">
-    <listen ip="0.0.0.0:8080"/>
-    <group name="servers" scheduler="roundrobin">
+    <listen ip="0.0.0.0:8080" />
+    <listen ip="0.0.0.0:8081" />
+    <group name="servers1" scheduler="leastconns">
       <host name="server1" ip="lorien:7001" />
       <host name="server2" ip="lorien:7002" />
       <host name="server3" ip="lorien:7003" />
+    </group>
+    <group name="servers2" scheduler="roundrobin">
       <host name="server4" ip="lorien:7004" />
       <host name="server5" ip="lorien:7005" />
       <host name="server21" ip="lorien:7021" />
     </group>
-    <enable group="servers"/>
+    <enable group="servers1"/>
   </service>
   <service name="twisted-fangorn">
     <listen ip="0.0.0.0:6080"/>
